[gd_scene load_steps=76 format=3 uid="uid://x1hpcettjnyh"]

[ext_resource type="Texture2D" uid="uid://b27dwjvtyjton" path="res://sprites/gameover/gameover_background.png" id="1_hj006"]
[ext_resource type="Script" uid="uid://lwqdakvn5g3a" path="res://scenes/gameover/game_over.gd" id="1_nilsj"]
[ext_resource type="Texture2D" uid="uid://dgnhqbqm3lwin" path="res://sprites/gameover/gameover_spotlight.png" id="2_g4atr"]
[ext_resource type="Texture2D" uid="uid://dpoxno4bp4pea" path="res://sprites/gameover/gameover_text0001.png" id="3_dmk8l"]
[ext_resource type="Texture2D" uid="uid://dffi5n68xd7a1" path="res://sprites/gameover/gameover_text0002.png" id="4_xr4r6"]
[ext_resource type="Texture2D" uid="uid://dymhm57qbwbv5" path="res://sprites/gameover/gameover_text0003.png" id="5_i0vat"]
[ext_resource type="Texture2D" uid="uid://otxghbeyvgo1" path="res://sprites/gameover/gameover_continue0001.png" id="6_0w1hp"]
[ext_resource type="Texture2D" uid="uid://butqrffnj3vb5" path="res://sprites/gameover/gameover_continue0002.png" id="7_onm6t"]
[ext_resource type="Texture2D" uid="uid://d04kc81nu38w3" path="res://sprites/gameover/gameover_continue0003.png" id="8_ea0b6"]
[ext_resource type="PackedScene" uid="uid://doh8y3b1r11g4" path="res://scenes/characters/playable/shimeji_ignore/shimeji_character_gameover.tscn" id="9_shaar"]
[ext_resource type="Texture2D" uid="uid://dem0umycp2wyv" path="res://sprites/gameover/gameover_yes0001.png" id="10_vnhwa"]
[ext_resource type="AudioStream" uid="uid://djp5sxejbftli" path="res://sfx/characters/shimeji/sfx_player_slamdash_fall.ogg" id="11_5btyp"]
[ext_resource type="Texture2D" uid="uid://cksoav75uuyup" path="res://sprites/gameover/gameover_yes0002.png" id="11_kplry"]
[ext_resource type="Texture2D" uid="uid://4tr62wj4ko0l" path="res://sprites/gameover/gameover_yes0003.png" id="12_gqhn7"]
[ext_resource type="Texture2D" uid="uid://d0m673bnacxul" path="res://sprites/gameover/gameover_yes0007.png" id="13_equb7"]
[ext_resource type="Texture2D" uid="uid://dcbp3qncgohgg" path="res://sprites/gameover/gameover_yes0008.png" id="14_lmdgp"]
[ext_resource type="Texture2D" uid="uid://df8vedvh0x4jp" path="res://sprites/gameover/gameover_yes0009.png" id="15_d7tla"]
[ext_resource type="Texture2D" uid="uid://dsv51r0boa8sl" path="res://sprites/gameover/gameover_yes0004.png" id="16_388bc"]
[ext_resource type="Texture2D" uid="uid://doimu1apg0ljk" path="res://sprites/gameover/gameover_yes0005.png" id="17_hf3il"]
[ext_resource type="Texture2D" uid="uid://cxseewqy52am0" path="res://sprites/gameover/gameover_yes0006.png" id="18_retts"]
[ext_resource type="Texture2D" uid="uid://d4nx36cxql7j1" path="res://sprites/gameover/gameover_no0001.png" id="19_8o6r7"]
[ext_resource type="Texture2D" uid="uid://bfw107x5mblmm" path="res://sprites/gameover/gameover_no0002.png" id="20_0wgwy"]
[ext_resource type="Texture2D" uid="uid://dkoxtuweebvj6" path="res://sprites/gameover/gameover_no0003.png" id="21_g56i2"]
[ext_resource type="Texture2D" uid="uid://b7j70p8xclqgw" path="res://sprites/gameover/gameover_no0007.png" id="22_8nxwt"]
[ext_resource type="Texture2D" uid="uid://clhwth2ghctqe" path="res://sprites/gameover/gameover_no0008.png" id="23_cgu6n"]
[ext_resource type="Texture2D" uid="uid://b1u0jf7bcuaou" path="res://sprites/gameover/gameover_no0009.png" id="24_p65wx"]
[ext_resource type="Texture2D" uid="uid://c78u8vjiyhuph" path="res://sprites/gameover/gameover_no0004.png" id="25_m6kwn"]
[ext_resource type="Texture2D" uid="uid://qgreytxl25fe" path="res://sprites/gameover/gameover_no0005.png" id="26_uouha"]
[ext_resource type="Texture2D" uid="uid://b3ovfg2u5yb3x" path="res://sprites/gameover/gameover_no0006.png" id="27_l8vt3"]
[ext_resource type="AudioStream" uid="uid://f3bgnu5jalut" path="res://sfx/menu/sfx_menu_select.ogg" id="29_e5bie"]
[ext_resource type="AudioStream" uid="uid://divy6aca65fhc" path="res://bgm/gameover/bgm_gameover.ogg" id="29_gftpl"]
[ext_resource type="AudioStream" uid="uid://dxhaip8bqpb3q" path="res://bgm/gameover/bgm_gameover_continue.ogg" id="30_moakk"]
[ext_resource type="AudioStream" uid="uid://c34txxvwhy20f" path="res://sfx/menu/sfx_menu_deselect.ogg" id="30_qvk72"]
[ext_resource type="AudioStream" uid="uid://dlf2bwrdvr4wi" path="res://sfx/menu/sfx_menu_hover.ogg" id="31_tpvwp"]
[ext_resource type="AudioStream" uid="uid://osa0d5ny5wcb" path="res://bgm/gameover/bgm_continue_yes.ogg" id="31_x4ohe"]
[ext_resource type="AudioStream" uid="uid://gchfisbxchwu" path="res://bgm/gameover/bgm_continue_no.ogg" id="32_tj28c"]
[ext_resource type="AudioStream" uid="uid://covs3dxgqketi" path="res://sfx/characters/shimeji/sfx_player_jump.ogg" id="37_orlq0"]
[ext_resource type="AudioStream" uid="uid://cbp0fhmolydt4" path="res://sfx/characters/shimeji/sfx_player_slamdash_end.ogg" id="38_1lhjx"]
[ext_resource type="AudioStream" uid="uid://d2vwhdvavfght" path="res://sfx/characters/shimeji/sfx_player_slamdash_start.ogg" id="39_4jgph"]
[ext_resource type="AudioStream" uid="uid://c4wrrlsv3vqti" path="res://sfx/characters/shimeji/sfx_player_crouching.ogg" id="40_b1tvp"]
[ext_resource type="AudioStream" uid="uid://biyd8hsfrqxk" path="res://sfx/characters/shimeji/sfx_player_footstep_01.ogg" id="41_2qbel"]
[ext_resource type="AudioStream" uid="uid://bu6m4p6s2j3vs" path="res://sfx/characters/shimeji/sfx_player_footstep_02.ogg" id="42_8rb33"]
[ext_resource type="AudioStream" uid="uid://bykvejp0m8w2n" path="res://sfx/characters/shimeji/sfx_player_footstep_03.ogg" id="43_0wx44"]
[ext_resource type="AudioStream" uid="uid://puh8n42bb6y0" path="res://sfx/characters/shimeji/sfx_player_footstep_04.ogg" id="44_xb7mq"]
[ext_resource type="AudioStream" uid="uid://cjllxwyvcjvt" path="res://sfx/characters/shimeji/sfx_player_footstep_05.ogg" id="45_5dwtv"]
[ext_resource type="AudioStream" uid="uid://br61hsjskh0wh" path="res://sfx/characters/shimeji/sfx_player_damage.ogg" id="46_m0ox0"]
[ext_resource type="AudioStream" uid="uid://cy26sljcrr4jr" path="res://sfx/characters/shimeji/sfx_player_death.ogg" id="47_84ebe"]
[ext_resource type="AudioStream" uid="uid://dlt0lx7ordxhh" path="res://sfx/characters/shimeji/sfx_player_pickup.ogg" id="48_b5cu5"]
[ext_resource type="AudioStream" uid="uid://dpqxdiauuupqk" path="res://sfx/characters/shimeji/sfx_player_throw.ogg" id="49_p4rvo"]
[ext_resource type="AudioStream" uid="uid://bfyw1mf8ix1lq" path="res://sfx/characters/shimeji/sfx_player_grabwall.ogg" id="50_5w4jn"]
[ext_resource type="AudioStream" uid="uid://c4aeu0f71o0p8" path="res://sfx/characters/shimeji/sfx_player_climbing_01.ogg" id="51_xrxry"]
[ext_resource type="AudioStream" uid="uid://f7i35pprewg0" path="res://sfx/characters/shimeji/sfx_player_climbing_02.ogg" id="52_dmoua"]
[ext_resource type="AudioStream" uid="uid://c31gx2256yxi5" path="res://sfx/gameover/sfx_gameover_spotlight.ogg" id="53_plhb6"]

[sub_resource type="SpriteFrames" id="SpriteFrames_f8p1t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_dmk8l")
}, {
"duration": 1.0,
"texture": ExtResource("4_xr4r6")
}, {
"duration": 1.0,
"texture": ExtResource("5_i0vat")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_84kw7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_0w1hp")
}, {
"duration": 1.0,
"texture": ExtResource("7_onm6t")
}, {
"duration": 1.0,
"texture": ExtResource("8_ea0b6")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="Animation" id="Animation_stdh6"]
length = 0.001

[sub_resource type="Animation" id="Animation_e2u3h"]
resource_name = "fallmotion"
length = 5.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"funny_crash"
}]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSFX/SlamDash_Fall")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_5btyp")
}],
"times": PackedFloat32Array(1.5)
}
tracks/1/use_blend = true
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"char_fall"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vc8pl"]
_data = {
&"RESET": SubResource("Animation_stdh6"),
&"fallmotion": SubResource("Animation_e2u3h")
}

[sub_resource type="AnimatedTexture" id="AnimatedTexture_w3lde"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("10_vnhwa")
frame_1/texture = ExtResource("11_kplry")
frame_1/duration = 1.0
frame_2/texture = ExtResource("12_gqhn7")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_d3mu7"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("13_equb7")
frame_1/texture = ExtResource("14_lmdgp")
frame_1/duration = 1.0
frame_2/texture = ExtResource("15_d7tla")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_dpr5u"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("16_388bc")
frame_1/texture = ExtResource("17_hf3il")
frame_1/duration = 1.0
frame_2/texture = ExtResource("18_retts")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_8kl6b"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("19_8o6r7")
frame_1/texture = ExtResource("20_0wgwy")
frame_1/duration = 1.0
frame_2/texture = ExtResource("21_g56i2")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_4377w"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("22_8nxwt")
frame_1/texture = ExtResource("23_cgu6n")
frame_1/duration = 1.0
frame_2/texture = ExtResource("24_p65wx")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_8v62i"]
frames = 3
speed_scale = 6.0
frame_0/texture = ExtResource("25_m6kwn")
frame_1/texture = ExtResource("26_uouha")
frame_1/duration = 1.0
frame_2/texture = ExtResource("27_l8vt3")
frame_2/duration = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e6ihm"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_o40w1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(914, 166)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ContinueText:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(594, 325)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spotlight:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1.10762)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Yes_Button:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(859, 522)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("No_Button:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(62, 511)]
}

[sub_resource type="Animation" id="Animation_tid1n"]
resource_name = "intro"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GameOverText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 2.2),
"transitions": PackedFloat32Array(1, 0.615573, 2.37842),
"update": 0,
"values": [Vector2(914, -166), Vector2(914, -166), Vector2(914, 166)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ContinueText:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4, 5.5),
"transitions": PackedFloat32Array(1, 0.287175, 3.03143),
"update": 0,
"values": [Vector2(594, 725), Vector2(594, 725), Vector2(594, 325)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Spotlight:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(0.287175, 3.03143, 0.574349),
"update": 0,
"values": [Vector2(0.1, 1.108), Vector2(1.3, 1.108), Vector2(1, 1.10762)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Yes_Button:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 6, 8),
"transitions": PackedFloat32Array(1, 0.267944, 3.03143),
"update": 0,
"values": [Vector2(859, 822), Vector2(859, 822), Vector2(859, 522)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("No_Button:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 6, 8),
"transitions": PackedFloat32Array(1, 0.267944, 3.03143),
"update": 0,
"values": [Vector2(62, 822), Vector2(62, 822), Vector2(62, 511)]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(6.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_cotinuetheme"
}]
}
tracks/6/type = "audio"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Spotlightsound")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("53_plhb6")
}],
"times": PackedFloat32Array(0)
}
tracks/6/use_blend = true

[sub_resource type="Animation" id="Animation_ggmdb"]
resource_name = "outro"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ContinueText:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 2.2),
"transitions": PackedFloat32Array(1, 0.203063, 3.4822),
"update": 0,
"values": [Vector2(594, 325), Vector2(594, 325), Vector2(594, -325)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Yes_Button:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 2.2),
"transitions": PackedFloat32Array(1, 0.277393, 3.73213),
"update": 0,
"values": [Vector2(859, 522), Vector2(859, 522), Vector2(859, 822)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("No_Button:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 2.2),
"transitions": PackedFloat32Array(1, 0.277393, 3.73213),
"update": 0,
"values": [Vector2(62, 511), Vector2(62, 511), Vector2(62, 811)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GameOverText:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 2.2),
"transitions": PackedFloat32Array(1, 0.25, 5.09824),
"update": 0,
"values": [Vector2(914, 166), Vector2(914, 166), Vector2(914, -166)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(4.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_transition"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_184u1"]
_data = {
&"RESET": SubResource("Animation_o40w1"),
&"intro": SubResource("Animation_tid1n"),
&"outro": SubResource("Animation_ggmdb")
}

[sub_resource type="Animation" id="Animation_eopfy"]
resource_name = "FadeOut"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"load_scene"
}]
}

[sub_resource type="Animation" id="Animation_buuiw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_1jkas"]
resource_name = "Visible"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_okxtl"]
_data = {
&"FadeOut": SubResource("Animation_eopfy"),
&"RESET": SubResource("Animation_buuiw"),
&"Visible": SubResource("Animation_1jkas")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8kfb0"]
streams_count = 5
stream_0/stream = ExtResource("41_2qbel")
stream_1/stream = ExtResource("42_8rb33")
stream_2/stream = ExtResource("43_0wx44")
stream_3/stream = ExtResource("44_xb7mq")
stream_4/stream = ExtResource("45_5dwtv")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_q2w2f"]
streams_count = 2
stream_0/stream = ExtResource("51_xrxry")
stream_1/stream = ExtResource("52_dmoua")

[node name="GameOver" type="Node2D"]
script = ExtResource("1_nilsj")

[node name="Background" type="TextureRect" parent="."]
offset_left = -40.0
offset_top = -45.0
offset_right = 1240.0
offset_bottom = 675.0
texture = ExtResource("1_hj006")

[node name="Spotlight" type="Sprite2D" parent="."]
position = Vector2(596, 322.5)
scale = Vector2(1, 1.10762)
texture = ExtResource("2_g4atr")

[node name="GameOverText" type="AnimatedSprite2D" parent="."]
position = Vector2(914, 166)
scale = Vector2(0.254771, 0.254771)
sprite_frames = SubResource("SpriteFrames_f8p1t")
autoplay = "default"
frame_progress = 0.682654

[node name="ContinueText" type="AnimatedSprite2D" parent="."]
position = Vector2(594, 325)
scale = Vector2(0.185088, 0.185088)
sprite_frames = SubResource("SpriteFrames_84kw7")
autoplay = "default"
frame_progress = 0.126283

[node name="Character" type="Node2D" parent="."]

[node name="ShimejiCharacter_Gameover" parent="Character" instance=ExtResource("9_shaar")]
position = Vector2(582, 490)

[node name="ShimeFall" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_vc8pl")
}
autoplay = "fallmotion"

[node name="Yes_Button" type="TextureButton" parent="."]
offset_left = 859.0
offset_top = 522.0
offset_right = 1110.0
offset_bottom = 652.0
texture_normal = SubResource("AnimatedTexture_w3lde")
texture_pressed = SubResource("AnimatedTexture_d3mu7")
texture_hover = SubResource("AnimatedTexture_dpr5u")

[node name="No_Button" type="TextureButton" parent="."]
offset_left = 62.0
offset_top = 511.0
offset_right = 319.0
offset_bottom = 642.0
texture_normal = SubResource("AnimatedTexture_8kl6b")
texture_pressed = SubResource("AnimatedTexture_4377w")
texture_hover = SubResource("AnimatedTexture_8v62i")

[node name="BGM" type="Node2D" parent="."]

[node name="GameOver" type="AudioStreamPlayer2D" parent="BGM"]
stream = ExtResource("29_gftpl")
autoplay = true
bus = &"bgm"

[node name="Continue" type="AudioStreamPlayer2D" parent="BGM"]
stream = ExtResource("30_moakk")
bus = &"bgm"

[node name="YesJingle" type="AudioStreamPlayer2D" parent="BGM"]
stream = ExtResource("31_x4ohe")
bus = &"bgm"

[node name="NoJingle" type="AudioStreamPlayer2D" parent="BGM"]
stream = ExtResource("32_tj28c")
bus = &"bgm"

[node name="BlackScreen" type="Panel" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
offset_left = -88.0
offset_top = -94.0
offset_right = 1277.0
offset_bottom = 709.0
theme_override_styles/panel = SubResource("StyleBoxFlat_e6ihm")

[node name="GameOverScreenAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_184u1")
}
autoplay = "intro"

[node name="ButtonSounds" type="Node2D" parent="."]

[node name="Select" type="AudioStreamPlayer2D" parent="ButtonSounds"]
stream = ExtResource("29_e5bie")
bus = &"sfx"

[node name="Deselect" type="AudioStreamPlayer2D" parent="ButtonSounds"]
stream = ExtResource("30_qvk72")
bus = &"sfx"

[node name="Hover" type="AudioStreamPlayer2D" parent="ButtonSounds"]
stream = ExtResource("31_tpvwp")
bus = &"sfx"

[node name="BlackScreenAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_okxtl")
}
autoplay = "Visible"

[node name="PlayerSFX" type="Node" parent="."]

[node name="Jump" type="AudioStreamPlayer" parent="PlayerSFX"]
stream = ExtResource("37_orlq0")

[node name="DoubleJump" type="AudioStreamPlayer" parent="PlayerSFX"]
stream = ExtResource("38_1lhjx")

[node name="Sit_In" type="AudioStreamPlayer" parent="PlayerSFX"]

[node name="Sit_Out" type="AudioStreamPlayer" parent="PlayerSFX"]

[node name="SlamDash_Start" type="AudioStreamPlayer" parent="PlayerSFX"]
stream = ExtResource("39_4jgph")

[node name="SlamDash_Fall" type="AudioStreamPlayer" parent="PlayerSFX"]

[node name="SlamDash_Land" type="AudioStreamPlayer" parent="PlayerSFX"]

[node name="SlamDash_End" type="AudioStreamPlayer" parent="PlayerSFX"]

[node name="Move_Crouching" type="AudioStreamPlayer" parent="PlayerSFX"]
stream = ExtResource("40_b1tvp")

[node name="FootstepsSounds" type="AudioStreamPlayer" parent="PlayerSFX"]
stream = SubResource("AudioStreamRandomizer_8kfb0")

[node name="Ouch" type="AudioStreamPlayer" parent="PlayerSFX"]
stream = ExtResource("46_m0ox0")

[node name="Dead" type="AudioStreamPlayer" parent="PlayerSFX"]
stream = ExtResource("47_84ebe")

[node name="PickUpSFX" type="AudioStreamPlayer" parent="PlayerSFX"]
stream = ExtResource("48_b5cu5")

[node name="ThrowSFX" type="AudioStreamPlayer" parent="PlayerSFX"]
stream = ExtResource("49_p4rvo")

[node name="GrabWallSound" type="AudioStreamPlayer" parent="PlayerSFX"]
stream = ExtResource("50_5w4jn")

[node name="ClimbingSounds" type="AudioStreamPlayer" parent="PlayerSFX"]
stream = SubResource("AudioStreamRandomizer_q2w2f")

[node name="Spotlightsound" type="AudioStreamPlayer2D" parent="."]
bus = &"sfx"

[connection signal="pressed" from="Yes_Button" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="No_Button" to="." method="_on_no_button_pressed"]
